--- a/style.css
+++ b/style.css
@@ -733,6 +733,7 @@ header:after {
 }
 
 .coworker-website:before {
+  font-size: 0.7em;
   background: #464546 url("images/contact-website.png") no-repeat center center/23px 20px;
 }
 
